tests/NormalTests/paczka1/small_fuzzy/58333834.err
Error in line 2: A586 A515 92,8
Error in line 7: RUrH A586 10,1
Error in line 3: FcTg A586 82,8
